--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 <body>
   
 
+  <div id="app">
+
+    <div>
+
+      <h1>devo stampare le email</h1>
+
+    </div>
+
+  </div>
+
 
   <script src="script.js"></script>
 </body>
