--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
       <h1>devo stampare le email</h1>
 
+      <ul>
+        <li v-for="email in risultato">  {{risultato}} </li>
+      </ul>
+
     </div>
 
   </div>
