--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>devo stampare le email</h1>
 
       <ul>
-        <li v-for="email in risultato">  {{risultato}} </li>
+        <li v-for=" email in random">{{email}} </li>
       </ul>
 
     </div>
