--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <div>
 
       <h1>devo stampare le email</h1>
-
       <ul>
-        <li v-for=" email in random">{{email}} </li>
+        <li  v-for="email in randomEm"> {{email}} </li>
       </ul>
 
     </div>
