--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <h1>devo stampare le email</h1>
       <ul>
-        <li  v-for="email in randomEm"> {{email}} </li>
+        <li  v-for="risultato in randomEm"> {{risultato}} </li>
       </ul>
 
     </div>
