--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
     <div>
 
       <h1>devo stampare le email</h1>
+      
       <ul>
-        <li  v-for="risultato in randomEm"> {{risultato}} </li>
+        <li v-for="email in emails">
+          {{email}}
+        </li>
       </ul>
+      
 
     </div>
 
